Created Campaign DataFrame

--- a/ETL_Mini_Project_BAbdulHak.ipynb
+++ b/ETL_Mini_Project_BAbdulHak.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +466,19 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "preparse = crowdfunding_info_df[\"category & sub-category\"].str.split(\"/\")\n",
+    "\n",
+    "cat = []\n",
+    "subcat = []\n",
+    "for row in preparse:\n",
+    "    cat.append(row[0])\n",
+    "    subcat.append(row[1])\n",
+    "\n",
+    "crowdfunding_info_df[\"category\"] = cat\n",
+    "crowdfunding_info_df[\"subcategory\"] = subcat\n",
+    "\n",
+    "crowdfunding_info_df.head()\n"
    ]
   },
   {
@@ -488,6 +502,8 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
+    "categories = crowdfunding_info_df.category.unique()\n",
+    "subcategories = crowdfunding_info_df.subcategory.unique()\n",
     "\n",
     "\n",
     "print(categories)\n",
@@ -553,8 +569,9 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = [f\"cat{id}\" for id in category_ids]\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
+    "scat_ids = [f\"subcat{id}\" for id in subcategory_ids]\n",
     "\n",
     "    \n",
     "print(cat_ids)\n",
@@ -563,18 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "catdict = {\"category_id\":cat_ids,\"category\":categories}\n",
+    "category_df = pd.DataFrame(catdict)\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a subcategory DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "scatdict = {\"subcategory_id\":scat_ids, \"subcategory\":subcategories}\n",
+    "subcategory_df = pd.DataFrame(scatdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +686,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +878,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3688,7 +3709,7 @@
   "kernelspec": {
    "display_name": "PythonData",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3701,6 +3722,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d2eff5886470145a01c1a6cacbdc4ca5ce9faf89a8ffd10be794f3be292ac244"
+   }
   }
  },
  "nbformat": 4,
